--- a/app/templates/partials/box-product.html
+++ b/app/templates/partials/box-product.html
@@ -2,18 +2,21 @@
     <div class="box-header">
         <a ui-sref="product-detail({slug:product.slug})" title="Ver más">
             <img class="img-box" src="{{product.featuredImage.url ? product.featuredImage.url : initConfig.img_default}}" alt="{{ product.name }}">
-            <!--<div class="box-bg-img"
-            style="background-image: url('{{product.featuredImage.url ? product.featuredImage.url : initConfig.img_default}}')"></div>
-            -->
         </a>
+        
     </div>
     <div class="box-container">
+        <i class="fa fa-truck" aria-hidden="true" ng-if="product.shipmentPrice === 0"> <span class="text-success">Envio gratis</span> </i>
         <div class="row align-items-center">
             <div class="col-sm-12">
                 <p class="box-title">{{ product.name | limitTo:40}}</p>
+                <span>
+                    <ng-pluralize style="font-size: 11px;" count="product.colors.length" when="{'1': 'Un color disponible', 'other': '{} colores disponibles.'}"></ng-pluralize>
+                </span>
             </div>
             <div class="col-md-12" ng-class="product.offerPrice > 0 ? 'hide': 'col-sm-4'">
                 <p class="price">{{ product.price | currency }}</p>
+
             </div>
             <div class="col-sm-12 no-padding" ng-if="product.offerPrice > 0">
                 <div class="container">
