change ui to select color and size

--- a/app/templates/partials/box-product.html
+++ b/app/templates/partials/box-product.html
@@ -6,7 +6,7 @@
         
     </div>
     <div class="box-container">
-        <i class="fa fa-truck" aria-hidden="true" ng-if="product.shipmentPrice === 0"> <span class="text-success">Envio gratis</span> </i>
+        <i class="fa fa-truck text-success" aria-hidden="true" ng-if="product.shipmentPrice === 0"> <span class="text-success">Envio gratis</span> </i>
         <div class="row align-items-center">
             <div class="col-sm-12">
                 <p class="box-title">{{ product.name | limitTo:40}}</p>
