--- a/app/templates/product-detail.html
+++ b/app/templates/product-detail.html
@@ -18,7 +18,7 @@
                                         <span ng-if="Product.detail.inventory <= 0 && Product.detail.kind === 'product'" style="font-size: 13px;"> Producto agotado</span>
                                     </div>
                                     <h2 class="article-price">{{ Product.detail.price | currency}}</h2>
-                                    <i class="fa fa-truck title-prd" aria-hidden="true" ng-if="Product.detail.shipmentPrice === 0"> <span class="text-success title-prd">Envio gratis</span> </i>
+                                    <i class="fa fa-truck title-prd text-success" aria-hidden="true" ng-if="Product.detail.shipmentPrice === 0"> <span class="text-success title-prd">Envio gratis</span> </i>
                                     <br>
                                 </div>
                                 <div class="col-sm-12 type-payments">
@@ -43,8 +43,9 @@
                                         </li>
                                     </ul>
                                 </div>
-                                <div class="col-md-12">
-                                    <i class="fa fa-undo" aria-hidden="true"> <span class="text-success"> Devolución gratis</span> </i>
+                                <div class="col-md-12" style="margin-bottom: 5%;">
+                                    <i class="fa fa-undo text-success" aria-hidden="true"> <span class="text-success"> Devolución gratis</span> </i>
+                                    <br>
                                 </div>
                                 <div class="col-sm-12">
                                     <form name="FormQty">
