add new payment method

--- a/app/templates/product-detail.html
+++ b/app/templates/product-detail.html
@@ -55,7 +55,7 @@
                                     </form>
                                     <div class="row">
                                         <div class="col-sm-12">
-                                            <button ng-click="Shop.setItem({id: Product.detail.id, name: Product.detail.name,
+                                            <button id="shopNow" ng-click="Shop.setItem({id: Product.detail.id, name: Product.detail.name,
                                                 price: Product.detail.price, image: Product.detail.featuredImage.url,
                                                 qty: Product.detail.qty, taxonomies : Product.detail.taxonomies,
                                                 shipmentPrice: Product.detail.shipmentPrice, typeTax: Product.detail.typeTax,
@@ -68,7 +68,7 @@
                                     </div>
                                         <div class="row">
                                             <div class="col-sm-12">
-                                                <button ng-click="Shop.setItem({id: Product.detail.id, name: Product.detail.name,
+                                                <button id="addCart" ng-click="Shop.setItem({id: Product.detail.id, name: Product.detail.name,
                                                     price: Product.detail.price, image: Product.detail.featuredImage.url,
                                                     qty: Product.detail.qty, taxonomies : Product.detail.taxonomies,
                                                      shipmentPrice: Product.detail.shipmentPrice, typeTax: Product.detail.typeTax,
