ajuste de estilo en las tarjetas de los productos

--- a/app/css/layout/layout.styl
+++ b/app/css/layout/layout.styl
@@ -116,6 +116,9 @@ md-input-container
   .section-two
     padding 60px 0 20px !important
 
+    .title-middle-line
+      margin-bottom 40px
+
 
   // silence is gold ..
 
