--- a/app/css/layout/responsive.styl
+++ b/app/css/layout/responsive.styl
@@ -98,8 +98,21 @@
     #product-detail .wip-image-zoom .main-image, .md-dialog-content #product-detail .wip-image-zoom .main-image
       width 100% !important
       height auto !important
+  .box-simple 
+    .box-container 
+      position relative
+      i.fa.fa-truck.text-success.ng-scope
+        position absolute
+        bottom 92%
+        left 0
+        right 0
+        background #fff
+        padding 0
+        width 71%
+        margin 0 auto
   .box-simple .box-header .img-box
-    height 120px
+    height 120px 
+    width 120px 
   .box-simple
     padding 0
   .temp-product-detail .bg-image-single, .md-dialog-content .bg-image-single 
