--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -27,7 +27,7 @@
         </div>
     </section>
 
-    <section class="section-four" ng-controller="ShoppingCtrl as Shop">
+    <section class="section-two" ng-controller="ShoppingCtrl as Shop">
         <div class="container">
             <div class="title-middle-line">
                 <div class="text-content">
@@ -43,7 +43,7 @@
         </div>
     </section>
 
-    <section class="section-four" ng-controller="ShoppingCtrl as Shop">
+    <section class="section-two" ng-controller="ShoppingCtrl as Shop">
         <div class="container">
             <div class="title-middle-line">
                 <div class="text-content">
