--- a/app/css/core/components.styl
+++ b/app/css/core/components.styl
@@ -165,10 +165,12 @@
     .nav li a p 
       font-size 18px
 .box-simple
+  border 1px solid #eee
   @extend .box
+  padding 0 !important
   background-color white
   margin-bottom 15px
-  transition(all 0.3s)
+  transition all 0.3s
   a
     color fontClr
     &:hover
@@ -184,13 +186,28 @@
       background-size contain
       height 300px
     .img-box
-      height 130px  
+      width 200px
+      height 200px
+      object-fit contain
+      margin-top 35px
   .box-container
     text-align center
     margin-bottom 15px
-    padding-top 15px 
+    padding-top 25px
+    padding-bottom 20px 
     margin-top 15px 
     border-top 1px solid #ddd
+    p 
+      margin-bottom 0
+    i.fa.fa-truck.text-success.ng-scope
+      position absolute
+      bottom 34%
+      left 0
+      right 0
+      background white
+      padding 0
+      width 42%
+      margin 0 auto
     .price 
       font-weight bold
     .box-title
@@ -198,7 +215,7 @@
   .box-footer
     text-align center
   &:hover
-    box(15px, 0 4px 20px rgba(0,0,0,0), 1px solid transparent, 3px)
+    box(15px, 0 4px 20px rgba(0,0,0,0.0921), 1px solid #eee, 3px)
 
 .box-default
   @extend .box
