--- a/app/templates/shop/shopcart.html
+++ b/app/templates/shop/shopcart.html
@@ -148,10 +148,19 @@
                                     </tbody>
                                 </table>
                             </div>
-                            <button class="btn btn-black btn-block" ng-click="ShopCart.processPurchase()"
+                            <div ng-controller="AccessCtrl as Access">
+                                <button ng-if="Access.isAuthenticated()" class="btn btn-black btn-block" ng-click="ShopCart.processPurchase()"
                                     ng-if="ShopCart.total >= ShopCart.minimumPurchase" ng-disabled="itemsForm.$invalid"><i
                                     class="fa fa-credit-card"></i> Procesar compra
+                                </button>
+
+                                <button ng-if="!Access.isAuthenticated()" class="btn btn-black btn-block" ui-sref="shipping-address({intent:'guest'})"
+                                ng-if="ShopCart.total >= ShopCart.minimumPurchase" ng-disabled="itemsForm.$invalid"><i
+                                class="fa fa-credit-card"></i> Procesar compra
                             </button>
+
+                            </div>
+
                             <p ng-if="ShopCart.total <= ShopCart.minimumPurchase"> El monto mínimo para completar la
                                 compra y poder continuar es de {{ShopCart.minimumPurchase | currency}}</p>
                         </div>
